--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin - Livret-de-validation-des-compétences.pdf">Compétences</a></li>
 -->	</ul>
-</div> -->
+</div> 
 	<!-- Bouton FLOAT FIN -->
 <!-- TEST SIDEBARE
 <ul id="slide-out" class="side-nav">
