--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
 		</div>
 	</nav>
 
-	<!-- BOUTON FLOAT DEBUT -->
+	<!-- BOUTON FLOAT DEBUT 
 	<div class="fixed-action-btn horizontal">
 	<a class="btn-floating btn-large red">
 		<i class="large material-icons">mode_edit</i>
 	</a>
 	<ul>
-	<!--	<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
 		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin - Livret-de-validation-des-compétences.pdf">Compétences</a></li>
