ajout lien google plus

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</nav>
 
-	<!-- BOUTON FLOAT DEBUT 
+	<!-- BOUTON FLOAT DEBUT
 	<div class="fixed-action-btn horizontal">
 	<a class="btn-floating btn-large red">
 		<i class="large material-icons">mode_edit</i>
@@ -92,7 +92,7 @@
 				</center>
 
 				<div class="carousel">
-					<a class="carousel-item" href="https://www.facebook.com"><img src="174834-social-media-logos/png/facebook.png"></a>
+					<a class="carousel-item" href="https://plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
 
 					<a class="carousel-item" href="https://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 
