--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,8 @@
 							<div class="card-stacked">
 								<div class="card-content">
 									<p class="textCard">Je m'appelle Colin Bléchet, 25 ans, je suis développeur junior JavaScript.<br />
-									Ici vous trouverez toute les information sur mon parcours, mes competences, mais aussi<br />
-									des réalisations et ma veille techno passé, actuel et à venir.<br />
+																			Ici vous trouverez toutes les informations sur mon parcours, mes compétences, mais aussi<br />
+																			des réalisations et ma veille techno passées, actuelles et à venir.<br />
 									</p>
 								</div>
 							</div>
@@ -92,7 +92,7 @@
 				</center>
 
 				<div class="carousel">
-					<a class="carousel-item" href="https://plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
+					<a class="carousel-item" href="https://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
 
 					<a class="carousel-item" href="https://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 
@@ -106,10 +106,10 @@
 				<center>
 				<div class="profil">
 					<h3>Mon profil</h3>
-					<p>Fortement intéressé et meme curieux du domaine de l'informatique, et plus precicement dans le devloppement web et logiciel<br />
-							j'ai su m'autoformer sur divers competence basique tel que html, css, jQuery ect... J'ai decouvert une veritable pasison pour le devloppemnt<br />
-							et j'ai donc voulu pousser mon apprentissage plus loin. La solution a été de faire la Wild Code School pour des participé a des projet client<br />
-							et apprendre un langage de programation, tout en mintegrant dans le monde du dévelopement.<br /></p>
+					<p>Fortement intéressé et même curieux du domaine de l'informatique, et plus précisément dans le développement web et logiciel<br />
+						j'ai su m'auto former sur divers compétences basiques tel que Html, Css, jQuery ect... J'ai découvert une véritable passion pour le développement<br />
+						et j'ai donc voulu pousser mon apprentissage plus loin. La solution a été de faire la Wild Code School pour  participer à des projets clients<br />
+						et apprendre un langage de programmation, tout en m'intégrant dans le monde du développement.</p>
 				</div>
 			</div>
 			</center>
@@ -254,17 +254,17 @@
 							<h1>Réalisations</h1>
 							<hr>
 								<p> <B>les réalisations à venir:</B> <br />
-										Tech in Chartres - site de meetUp dediée au nouvel technologie ( bientôt en ligne ).<br />
-										La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france ( en court ).<br />
-										Yunalyn-art - site d'une artiste ( dessins, musique ) bientot en court</p>
+										Tech in Chartres - site de MeetUp dédié aux nouvelles technologies (bientôt en ligne).<br />
+										La demeure de l'Arche - refonte d'un site de maison d’hôte situé dans le sud de la France (en cours).<br />
+										Yunalyn-art - site d'une artiste (dessins, musique) bientôt en cours</p>
 								</div>
 							<h1>Veille Techno</h1>
 								<hr>
 								<p>Ionic / cordova<br />
 										React et React Native</p>
-
+<!-- competence perso
 							<h1>COMPETENCES PERSONEL</h1>
-							<hr>
+							<hr> -->
 							<!-- ACCOrDION DEBUT DANS LE PARALAX
 							<ul class="collapsible" data-collapsible="accordion">
 								<li>
