--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</nav>
 
-	<!-- BOUTON FLOAT DEBUT
+	<!-- BOUTON FLOAT DEBUT -->
 	<div class="fixed-action-btn horizontal">
 	<a class="btn-floating btn-large red">
 		<i class="large material-icons">mode_edit</i>
@@ -37,7 +37,7 @@
 		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin - Livret-de-validation-des-compétences.pdf">Compétences</a></li>
--->	</ul>
+	</ul>
 </div>
 	<!-- Bouton FLOAT FIN -->
 <!-- TEST SIDEBARE
