--- a/public/index.html
+++ b/public/index.html
@@ -90,15 +90,15 @@
 				</center>
 
 				<div class="carousel">
-					<a class="carousel-item" href="https://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
+					<a class="carousel-item" href="http://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
 
-					<a class="carousel-item" href="https://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
+					<a class="carousel-item" href="http://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 
-					<a class="carousel-item" href="https://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
+					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
 
-					<a class="carousel-item" href="https://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
+					<a class="carousel-item" href="http://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
 
-					<a class="carousel-item" href="https://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
+					<a class="carousel-item" href="http://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
 
 				</div>
 				<center>
