--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 	<div class="fixed-action-btn horizontal">
 	<a class="btn-floating btn-large red"><i class="large material-icons">mode_edit</i></a>
 	<ul>
-		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+<!--		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li> -->
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin - Livret-de-validation-des-compétences.pdf">Compétences</a></li>
 	</ul>
@@ -92,7 +92,7 @@
 				<div class="carousel">
 					<a class="carousel-item" href="http://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
 
-					<a class="carousel-item" href="http://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
+					<a class="carousel-item" href="https://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
 
@@ -351,10 +351,10 @@
 								<div class="row">
 									<div class="col l6 s12">
 										<h5 class="white-text">INFOS</h5>
-										<p class="grey-text text-lighten-4">Ce CV est ammener a evoluer dans le temps toujours mis a jour <br />
-																												avec de nouvelles fonctionnalitées, pour que vous puissiez voir les technique utilisé.<br />
+										<p class="grey-text text-lighten-4">Ce CV est amené à evoluer dans le temps, toujours mis a jour <br />
+																												avec de nouvelles fonctionnalitées, pour que vous puissiez voir les techniques utilisée.<br />
 																												Je vous remerci d'avance de l'attention que vous portez a mon cv<br />
-																												 et vous invite a me suivre sur mes reseau sociaux.</p>
+																												et vous invite a me suivre sur mes reseau sociaux.</p>
 									</div>
 									<div class="col l4 offset-l2 s12">
 										<h5 class="white-text">Links</h5>
