--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 <!--		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
 		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li> -->
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
-		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin-Livret-de-validation-des-compétences.pdf">Compétences</a></li>
+		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="BLECHET-Colin-Livret-de-validation-des-competences.pdf">Compétences</a></li>
 	</ul>
 </div>
 	<!-- Bouton FLOAT FIN -->
@@ -91,13 +91,9 @@
 
 				<div class="carousel">
 					<a class="carousel-item" href="http://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
-
-					<a class="carousel-item" href="https://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
-
+					<a class="carousel-item" href="http://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
-
 					<a class="carousel-item" href="http://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
-
 					<a class="carousel-item" href="http://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
 
 				</div>
