obliger de commit 500 fois mdr

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 				</center>
 
 				<div class="carousel">
-					<a class="carousel-item" href="http://www.plus.google.com/114936327770131156979"><img src="174834-social-media-logos/png/google-plus.png"></a>
+					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"><img src="174834-social-media-logos/png/google-plus.png"></a>
 					<a class="carousel-item" href="http://www.twitter.com"><img src="174834-social-media-logos/png/twitter.png"></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
 					<a class="carousel-item" href="http://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
