--- a/public/index.html
+++ b/public/index.html
@@ -347,10 +347,10 @@
 								<div class="row">
 									<div class="col l6 s12">
 										<h5 class="white-text">INFOS</h5>
-										<p class="grey-text text-lighten-4">Ce CV est amené à evoluer dans le temps, toujours mis a jour <br />
-																												avec de nouvelles fonctionnalitées, pour que vous puissiez voir les techniques utilisée.<br />
-																												Je vous remerci d'avance de l'attention que vous portez a mon cv<br />
-																												et vous invite a me suivre sur mes reseau sociaux.</p>
+										<p class="grey-text text-lighten-4">Ce CV est amené à évoluer dans le temps toujours mis à jour<br />
+														avec de nouvelles fonctionnalités, pour que vous puissiez voir les techniques utilisées.<br />
+														Je vous remercie d'avance de l'attention que vous portez à mon CV<br />
+														et vous invite à me suivre sur mes réseaux sociaux.</p>
 									</div>
 									<div class="col l4 offset-l2 s12">
 										<h5 class="white-text">Links</h5>
