--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 								<div class="card-content">
 									<p class="textCard">Je m'appelle Colin Bléchet, 25 ans, je suis développeur junior JavaScript.<br />
 																			Ici vous trouverez toutes les informations sur mon parcours, mes compétences, mais aussi<br />
-																			des réalisations et ma veille techno passées, actuelles et à venir.<br />
+																			des réalisations et ma veille techno passée, actuelle et à venir.<br />
 									</p>
 								</div>
 							</div>
