--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 				<div class="carousel">
 					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"rel="publisher" target="_top" style="text-decoration:none;"><img src="174834-social-media-logos/png/google-plus.png" alt="Google+"/></a>
 					<a class="carousel-item" href="https://twitter.com/ColinBlec"><img src="174834-social-media-logos/png/twitter.png"></a>
-					<a href="https://twitter.com/ColinBlec" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ColinBlec</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+					<a class="carousel-item" href="https://twitter.com/ColinBlec" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ColinBlec</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
 					<a class="carousel-item" href="http://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
 					<a class="carousel-item" href="http://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
