--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 	<!-- BOUTON FLOAT DEBUT -->
 	<div class="fixed-action-btn horizontal">
-	<a class="btn-floating btn-large red"><i class="large material-icons">mode_edit</i></a>
+	<a class="btn-floating btn-large red"><i class="large material-icons">publish</i></a>
 	<ul>
 <!--		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
 		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li> -->
