--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,15 @@
 				<li><a href="#realisation">Réalisations</a></li>
 				<li><a href="#">Personel</a></li>
 				<li><a href="#">Me contacter</a></li>
+				<li><div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
 			</ul>
 		</div>
 	</nav>
