--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
 				<li><a href="#competence">Competences</a></li>
 				<li><a href="#realisation">Réalisations</a></li>
 				<li><a href="#">Personel</a></li>
-				<li><a href="#">Me contacter</a></li>
-				<li><div id="modal1" class="modal">
+				<li><a id="modal1" class="modal" href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>Me contacter</a></li>
     <div class="modal-content">
       <h4>Modal Header</h4>
       <p>A bunch of text</p>
@@ -101,9 +100,7 @@
 				<div class="carousel">
 					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"rel="publisher" target="_top" style="text-decoration:none;"><img src="174834-social-media-logos/png/google-plus.png" alt="Google+"/></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
-					<a class="carousel-item" href="http://www.skype.com"><img src="174834-social-media-logos/png/skype.png"></a>
 					<a class="carousel-item" href="http://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
-
 				</div>
 				<center>
 				<div class="profil">
