--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,7 @@
 				<li><a href="#competence">Competences</a></li>
 				<li><a href="#realisation">Réalisations</a></li>
 				<li><a href="#">Personel</a></li>
-				<li><a id="modal1" class="modal" href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>Me contacter</a></li>
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
+				<li><a href="#">Me contacter</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -101,7 +93,7 @@
 					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"rel="publisher" target="_top" style="text-decoration:none;"><img src="174834-social-media-logos/png/google-plus.png" alt="Google+"/></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
 					<a class="carousel-item" href="http://www.github.com"><img src="174834-social-media-logos/png/social-media (3).png"></a>
-				</div>
+			</div>
 				<center>
 				<div class="profil">
 					<h3>Mon profil</h3>
