--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 	<ul>
 <!--		<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
 		<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li> -->
-		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="#">C.V</a></li>
+		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger mon CV" href="/CV-colin-blechet.pdf">C.V</a></li>
 		<li><a class="btn tooltipped" data-position="top" data-delay="50" data-tooltip="Télécharger livret de compétence" href="/BLECHET-Colin-Livret-de-validation-des-competences.pdf">Compétences</a></li>
 	</ul>
 </div>
