--- a/public/index.html
+++ b/public/index.html
@@ -368,7 +368,7 @@
 							<div class="footer-copyright">
 								<div class="container">
 									© 2016 Copyright Colin Bléchet all right reserved
-									<a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+									<!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
 								</div>
 							</div>
 						</footer>
