--- a/public/index.html
+++ b/public/index.html
@@ -366,10 +366,12 @@
 								</div>
 							</div>
 							<div class="footer-copyright">
+								<center>
 								<div class="container">
 									© 2016 Copyright Colin Bléchet all right reserved
 									<!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
 								</div>
+							</center>
 							</div>
 						</footer>
 						<!-- FOOTER FIN -->
