--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 						<div id="competence">
 						<H1>COMPETENCES</H1>
 						<hr>
-						<div class='ui'>
+						<div class='ui' class="responsive-img">
 							<div class='ui_box'>
 								<div class='ui_box__inner'>
 									<h2>
@@ -200,7 +200,7 @@
 								</div>
 						</div>
 						</div>
-						<div class='ui'>
+						<div class='ui' class="responsive-img">
 							<div class='ui_box'>
 								<div class='ui_box__inner'>
 									<h2>
@@ -217,7 +217,7 @@
 								</div>
 							</div>
 						</div>
-						<div class='ui'>
+						<div class='ui' class="responsive-img">
 							<div class='ui_box'>
 								<div class='ui_box__inner'>
 									<h2>
