--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,23 @@
 					</div>
 
 				</center>
-
+<!-- CARD DEBUT -->
+				<div class="card">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="images/office.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+      <p>e m'appelle Colin Bléchet, 25 ans, je suis développeur junior JavaScript.<br />
+													Ici vous trouverez toutes les informations sur mon parcours, mes compétences, mais aussi<br />
+													des réalisations et ma veille techno passée, actuelle et à venir.<br /></p>
+    </div>
+  </div>
+<!-- CARD FIN-->
 				<div class="carousel">
 					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"rel="publisher" target="_top" style="text-decoration:none;"><img src="174834-social-media-logos/png/google-plus.png" alt="Google+"/></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
