--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 					</div>
 
 				</center>
-<!-- CARD DEBUT -->
+<!-- CARD DEBUT
 				<div class="card">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="images/office.jpg">
@@ -104,7 +104,7 @@
 													des réalisations et ma veille techno passée, actuelle et à venir.<br /></p>
     </div>
   </div>
-<!-- CARD FIN-->
+CARD FIN-->
 				<div class="carousel">
 					<a class="carousel-item" href="//plus.google.com/u/0/114936327770131156979?prsrc=3"rel="publisher" target="_top" style="text-decoration:none;"><img src="174834-social-media-logos/png/google-plus.png" alt="Google+"/></a>
 					<a class="carousel-item" href="http://www.linkedin.com"><img src="174834-social-media-logos/png/linkedin.png"></a>
