--- a/public/index.html
+++ b/public/index.html
@@ -267,8 +267,8 @@ CARD FIN-->
 								</div>
 							<h1>Veille Techno</h1>
 								<hr>
-								<p>Ionic / cordova<br />
-										React et React Native</p>
+								<!-- <p>Ionic / cordova<br />
+										React et React Native</p> -->
 <!-- competence perso
 							<h1>COMPETENCES PERSONEL</h1>
 							<hr> -->
