--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,35 @@
 			<p class="grey-text text-darken-3 lighten-3">
 
 				<hr>
+				<!-- Card normal debut -->
 
-				<center>
+				<!-- <div class="row">
+				      <div class="col s12 m4">
+				        <div class="card-panel teal">
+				          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+				          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+				          </span>
+				        </div>
+				      </div>
+
+							<div class="col s12 m4">
+				        <div class="card-panel teal">
+				          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+				          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+				          </span>
+				        </div>
+				      </div>
+
+							<div class="col s12 m4">
+				        <div class="card-panel teal">
+				          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+				          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+				          </span>
+				        </div>
+				      </div>
+						</div> -->
+					<!-- Card normal fin -->
+				<!-- <center>
 					<div id="presentation">
 					<div class="col s12 m12 offset-m2 l6 offset-l3">
 						<div class="card horizontal" style="margin-top: 20px; margin-bottom: 35px;">
@@ -87,7 +114,7 @@
 						</div>
 					</div>
 
-				</center>
+				</center> -->
 <!-- CARD DEBUT
 				<div class="card">
     <div class="card-image waves-effect waves-block waves-light">
@@ -197,78 +224,122 @@ CARD FIN-->
 					<h2 class="header"></h2>
 					<p class="grey-text text-darken-3 lighten-3">
 						<div id="competence">
-						<H1>COMPETENCES</H1>
-						<hr>
-						<div class='ui' class="col s12">
-							<div class='ui_box'>
-								<div class='ui_box__inner'>
-									<h2>
-										HTML 5
-									</h2>
-									<p></p>
-									<div class='stat'>
-										<span>90%</span>
+							<H1>COMPETENCES</H1>
+							<hr>
+							<!-- BLOCK HTML -->
+							<div class='ui'>
+								<div class='ui_box'>
+									<div class='ui_box__inner'>
+										<h2>
+											HTML 5
+										</h2>
+										<p></p>
+										<div class='stat'>
+											<span>90%</span>
+										</div>
+										<div class='progress'>
+											<div class='progress_bar_html'></div>
+										</div>
+										<p>Html5 | CodeCademy | Openclassrooms</p>
 									</div>
-									<div class='progress'>
-										<div class='progress_bar_html'></div>
+							</div>
+							</div>
+							<!-- BLOCK CSS -->
+							<div class='ui'>
+								<div class='ui_box'>
+									<div class='ui_box__inner'>
+										<h2>
+											CSS 3
+										</h2>
+										<p></p>
+										<div class='stat'>
+											<span>90%</span>
+										</div>
+										<div class='progress'>
+											<div class='progress_bar_css'></div>
+										</div>
+										<p>Materialize | Bootsrap</p>
 									</div>
-									<p>Html5 | CodeCademy | Openclassrooms</p>
-								</div>
-						</div>
-						</div>
-						<div class='ui' class="col s12">
-							<div class='ui_box'>
-								<div class='ui_box__inner'>
-									<h2>
-										CSS 3
-									</h2>
-									<p></p>
-									<div class='stat'>
-										<span>90%</span>
-									</div>
-									<div class='progress'>
-										<div class='progress_bar_css'></div>
-									</div>
-									<p>Materialize | Bootsrap</p>
 								</div>
 							</div>
-						</div>
-						<div class='ui' class="col s12">
-							<div class='ui_box'>
-								<div class='ui_box__inner'>
-									<h2>
-										JavaScript
-									</h2>
-									<p></p>
-									<div class='stat'>
-										<span>55%</span>
+							<!-- BLOCK JAvascript -->
+							<div class='ui'>
+								<div class='ui_box'>
+									<div class='ui_box__inner'>
+										<h2>
+											JavaScript
+										</h2>
+										<p></p>
+										<div class='stat'>
+											<span>55%</span>
+										</div>
+										<div class='progress'>
+											<div class='progress_bar_javascript'></div>
+										</div>
+										<p>AngularJs | React |</p>
 									</div>
-									<div class='progress'>
-										<div class='progress_bar_javascript'></div>
+								</div>
+							</div>
+							<!-- BLOCK PHP -->
+							<div class='ui'>
+								<div class='ui_box'>
+									<div class='ui_box__inner'>
+										<h2>
+											PHP
+										</h2>
+										<p></p>
+										<div class='stat'>
+											<span>50%</span>
+										</div>
+										<div class='progress'>
+											<div class='progress_bar_javascript'></div>
+										</div>
+										<p>Symfony</p>
 									</div>
-									<p>AngularJs</p>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				</div>
-				<div class="section white">
-					<div class="row container">
-						<h2 class="header"></h2>
-						<p class="grey-text text-darken-3 lighten-3">
-							<div id="realisation">
-							<h1>Réalisations</h1>
-							<hr>
-								<p> <B>les réalisations à venir:</B> <br />
-										Tech in Chartres - site de MeetUp dédié aux nouvelles technologies (bientôt en ligne).<br />
-										La demeure de l'Arche - refonte d'un site de maison d’hôte situé dans le sud de la France (en cours).<br />
-										Yunalyn-art - site d'une artiste (dessins, musique) bientôt en cours</p>
-								</div>
+					</div>
+					<div class="section white">
+						<div class="row container">
+							<h2 class="header"></h2>
+							<p class="grey-text text-darken-3 lighten-3">
+								<div id="realisation">
+									<!-- Realisation Debut -->
+								<h1>Réalisations</h1>
+								<hr>
+									<p> <B>les réalisations à venir:</B> <br />
+											Tech in Chartres - site de meetUp dediée au nouvel technologie.<br />
+											<!-- Carouselle presentation techChartres -->
+											<div class="carousel">
+			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
+	  									</div>
+											<p>La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france.<br />
+											<div class="carousel">
+			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
+	  									</div>
+											<p>Yunalyn-art - site d'une artiste ( dessins, musique ) En court</p>
+											<div class="carousel">
+			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
+	  									</div>
+											<p></p>
+											<div class="carousel">
+			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
+			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
+	  									</div>
+									</div>
 							<h1>Veille Techno</h1>
 								<hr>
-								<!-- <p>Ionic / cordova<br />
-										React et React Native</p> -->
+								<p>Ionic / cordova<br />
+										React et React Native</p>
 <!-- competence perso
 							<h1>COMPETENCES PERSONEL</h1>
 							<hr> -->
