--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
 	</ul>
 </div>
 	<!-- Bouton FLOAT FIN -->
-<!-- TEST SIDEBARE
+<!-- TEST SIDEBARE -->
 <ul id="slide-out" class="side-nav">
 	<li><div class="userView">
-		<img class="background" src="images/licorne1.jpg">
+		<img class="background" src="images/Colin-NB.jpg">
 		<a href="#!user"><img class="circle" src="images/licorne1.jpg"></a>
 		<a href="#!name"><span class="white-text name">Colin Bléchet</span></a>
 		<a href="#!email"><span class="white-text email">colinb.dev@gmail.com</span></a>
@@ -54,7 +54,7 @@
 </ul>
 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 </header>
--->
+
 <body>
 	<!-- TESTE  -->
 	<!-- -->
