--- a/public/index.html
+++ b/public/index.html
@@ -314,25 +314,25 @@ CARD FIN-->
 									<p> <B>les réalisations à venir:</B> <br />
 											Tech in Chartres - site de meetUp dediée au nouvel technologie.<br />
 											<!-- Carouselle presentation techChartres -->
-											<div class="carousel">
+											<div class="carousel1">
 			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
 	  									</div>
 											<p>La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france.<br />
-											<div class="carousel">
+											<div class="carousel1">
 			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
 	  									</div>
 											<p>Yunalyn-art - site d'une artiste ( dessins, musique ) En court</p>
-											<div class="carousel">
+											<div class="carousel1">
 			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
 	  									</div>
 											<p></p>
-											<div class="carousel">
+											<div class="carousel1">
 			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
 			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
