woua la maj de ouf

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
 				<li><a href="#presentation">Presentation</a></li>
 				<li><a href="#competence">Competences</a></li>
 				<li><a href="#realisation">Réalisations</a></li>
-				<li><a href="#">Personel</a></li>
-				<li><a href="#">Me contacter</a></li>
+				<!-- <li><a href="#">Personel</a></li>
+				<li><a href="#">Me contacter</a></li> -->
 			</ul>
 		</div>
 	</nav>
@@ -38,7 +38,7 @@
 	</ul>
 </div>
 	<!-- Bouton FLOAT FIN -->
-<!-- TEST SIDEBARE -->
+<!-- TEST SIDEBARE
 <ul id="slide-out" class="side-nav">
 	<li><div class="userView">
 		<img class="background" src="images/Colin-NB.jpg">
@@ -53,6 +53,8 @@
 	<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
 </ul>
 <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+-->
+
 </header>
 
 <body>
@@ -69,7 +71,25 @@
 
 				<hr>
 				<!-- Card normal debut -->
+				<center>
+					<div id="presentation">
+					<div class="col s12 m12 offset-m2 l6 offset-l3">
+						<div class="card horizontal" style="margin-top: 20px; margin-bottom: 35px;">
+							<div class="card-image">
+								<img src="images/Colin-NB.jpg">
+							</div>
+							<div class="card-stacked">
+								<div class="card-content">
+									<p class="textCard">Je m'appelle Colin Bléchet, 26 ans, je suis développeur junior JavaScript/PHP.<br />
+									Ici vous trouverez toutes les informations sur mon parcours, mes competences, mais aussi<br />
+									des réalisations et ma veille techno. Fan de jeux video je stream via Twitch et je suis en train de dev un jeu RPG<br />
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 
+				</center>
 				<!-- <div class="row">
 				      <div class="col s12 m4">
 				        <div class="card-panel teal">
@@ -311,33 +331,128 @@ CARD FIN-->
 									<!-- Realisation Debut -->
 								<h1>Réalisations</h1>
 								<hr>
-									<p> <B>les réalisations à venir:</B> <br />
-											Tech in Chartres - site de meetUp dediée au nouvel technologie.<br />
+									<p> <br />
+										<center>
+											<h4>Tech in Chartres - Site de meetUp dediée au nouvel technologie.</h4><br />
 											<!-- Carouselle presentation techChartres -->
-											<div class="carousel1">
-			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
-	  									</div>
-											<p>La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france.<br />
-											<div class="carousel1">
-			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
-	  									</div>
-											<p>Yunalyn-art - site d'une artiste ( dessins, musique ) En court</p>
-											<div class="carousel1">
-			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
-	  									</div>
-											<p></p>
-											<div class="carousel1">
-			  								<a class="carousel-item" href=""><img src="images/techChartres1.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres2.png"></a>
-			  								<a class="carousel-item" href=""><img src="images/techChartres3.png"></a>
-	  									</div>
+											<div class="slider">
+										    <ul class="slides">
+										      <li>
+										        <img src="images/techChartres1.png"> <!-- random image -->
+										        <div class="caption center-align">
+										        </div>
+										      </li>
+										      <li>
+										        <img src="images/techChartres2.png"> <!-- random image -->
+										        <div class="caption left-align">
+										        </div>
+										      </li>
+										      <li>
+										        <img src="images/techChartres3.png"> <!-- random image -->
+										        <div class="caption right-align">
+										        </div>
+										      </li>
+										    </ul>
+										  </div>
+											<hr>
+											<br>
+											<h4>La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france.</h4><br />
+
+												<div class="slider">
+											    <ul class="slides">
+											      <li>
+											        <img src="images/Arch1.png"> <!-- random image -->
+											        <div class="caption center-align">
+
+											        </div>
+											      </li>
+											      <li>
+											        <img src="images/Arch2.png"> <!-- random image -->
+											        <div class="caption left-align">
+
+											        </div>
+											      </li>
+											      <li>
+											        <img src="images/Arch3.png"> <!-- random image -->
+											        <div class="caption right-align">
+
+											        </div>
+											      </li>
+											    </ul>
+											  </div>
+
+											<hr>
+											<br>
+											<h4>Yunalyn-art - site d'une artiste ( dessins, musique ) Pas encore de visuel</h4>
+											<div class="slider">
+												<ul class="slides">
+													<li>
+														<img src="images/yuna1.png"> <!-- random image -->
+														<div class="caption center-align">
+
+														</div>
+													</li>
+												</ul>
+											</div>
+
+											<h4>Jeux video</h4>
+											<div class="slider">
+										    <ul class="slides">
+										      <li>
+										        <img src="images/game1.png"> <!-- random image -->
+										        <div class="caption center-align">
+
+										        </div>
+										      </li>
+										      <li>
+										        <img src="images/game2.png"> <!-- random image -->
+										        <div class="caption left-align">
+
+										        </div>
+										      </li>
+										      <li>
+										        <img src="images/game3.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+													<li>
+										        <img src="images/game4.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+													<li>
+										        <img src="images/game5.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+													<li>
+										        <img src="images/game6.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+													<li>
+										        <img src="images/game7.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+													<li>
+										        <img src="images/game8.png"> <!-- random image -->
+										        <div class="caption right-align">
+
+										        </div>
+										      </li>
+										    </ul>
+
+
+											</center>
+										  </div>
 									</div>
+
 							<h1>Veille Techno</h1>
 								<hr>
 								<p>Ionic / cordova<br />
@@ -402,8 +517,14 @@ CARD FIN-->
 						-->
 					</div>
 				</div>
-
-
+				<center>
+				<h4>Twitch</h4>
+				<div class="">
+					<iframe src="https://player.twitch.tv/?channel=alastoroo" frameborder="3" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+					<a href="https://www.twitch.tv/alastoroo?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">
+						Regardez une vidéo en direct de Alastoroo sur www.twitch.tv</a>
+				</div>
+			</center>
 						<!-- PARALLAX FIN -->
 						<!-- FORM DEBUT
 						<div class="row">
@@ -490,6 +611,9 @@ CARD FIN-->
 										// 	$(document).ready(function() {
 	 								// 		$('select').material_select();
  									// 	});
+									$(document).ready(function(){
+							      $('.slider').slider();
+							    });
   							</script>
   							<!-- SCRIPT FIN -->
 
