--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@ CARD FIN-->
 
 											<hr>
 											<br>
-											<h4>Yunalyn-art - site d'une artiste ( dessins, musique ) Pas encore de visuel</h4>
+											<h4>Yunalyn-art - site d'une artiste ( dessins, musique )</h4>
 											<div class="slider">
 												<ul class="slides">
 													<li>
