--- a/public/index.html
+++ b/public/index.html
@@ -81,8 +81,8 @@
 							<div class="card-stacked">
 								<div class="card-content">
 									<p class="textCard">Je m'appelle Colin Bléchet, 26 ans, je suis développeur junior JavaScript/PHP.<br />
-									Ici vous trouverez toutes les informations sur mon parcours, mes competences, mais aussi<br />
-									des réalisations et ma veille techno. Fan de jeux video je stream via Twitch et je suis en train de dev un jeu RPG<br />
+									Ici vous trouverez toutes les informations sur mon parcours, mes compétences, mais aussi<br />
+									des réalisations et ma veille techno. Fan de jeux vidéo, je stream via Twitch et je suis en train de dev un jeu Rpg.<br />
 									</p>
 								</div>
 							</div>
@@ -333,7 +333,7 @@ CARD FIN-->
 								<hr>
 									<p> <br />
 										<center>
-											<h4>Tech in Chartres - Site de meetUp dediée au nouvel technologie.</h4><br />
+											<h4>Tech in Chartres - Site de MeetUp à Chartres dédié aux nouvelles technologies.</h4><br />
 											<!-- Carouselle presentation techChartres -->
 											<div class="slider">
 										    <ul class="slides">
@@ -356,7 +356,7 @@ CARD FIN-->
 										  </div>
 											<hr>
 											<br>
-											<h4>La demeure de l'Arche - refonte d'un site de maison d'hote situé dans le sud de la france.</h4><br />
+											<h4>La Demeure de l'Arche - Refonte d'un site de maison d'hôte, située dans le sud de la France.</h4><br />
 
 												<div class="slider">
 											    <ul class="slides">
@@ -383,7 +383,7 @@ CARD FIN-->
 
 											<hr>
 											<br>
-											<h4>Yunalyn-art - site d'une artiste ( dessins, musique )</h4>
+											<h4>Yunalyn-art - Site d'une artiste ( dessins, musique ) En cours</h4>
 											<div class="slider">
 												<ul class="slides">
 													<li>
@@ -395,7 +395,7 @@ CARD FIN-->
 												</ul>
 											</div>
 
-											<h4>Jeux video</h4>
+											<h4>Jeux vidéo - En cours</h4>
 											<div class="slider">
 										    <ul class="slides">
 										      <li>
@@ -455,8 +455,8 @@ CARD FIN-->
 
 							<h1>Veille Techno</h1>
 								<hr>
-								<p>Ionic / cordova<br />
-										React et React Native</p>
+								<h4>Ionic / cordova<br />
+										React et React Native</h4>
 <!-- competence perso
 							<h1>COMPETENCES PERSONEL</h1>
 							<hr> -->
@@ -560,7 +560,7 @@ CARD FIN-->
 														et vous invite à me suivre sur mes réseaux sociaux.</p>
 									</div>
 									<div class="col l4 offset-l2 s12">
-										<h5 class="white-text">Links</h5>
+										<h5 class="white-text"></h5>
 										<a href="https://twitter.com/ColinBlec" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @ColinBlec</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 										<div>
